server/k8s/engagement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-engagement-deployment
  namespace: ksox-finance
  labels:
    app: server-engagement
spec:
  selector:
    matchLabels:
      app: server-engagement
  template:
    metadata:
      labels:
        app: server-engagement
    spec:
      containers:
        - name: server-engagement
          image: server-engagement
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 200Mi
              cpu: 200m
            limits:
              memory: 400Mi
              cpu: 400m
---
apiVersion: v1
kind: Service
metadata:
  name: server-engagement-service
  namespace: ksox-finance
spec:
  selector:
    app: server-engagement
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
