server/k8s/engine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-engine-deployment
  namespace: ksox-finance
  labels:
    app: server-engine
spec:
  selector:
    matchLabels:
      app: server-engine
  template:
    metadata:
      labels:
        app: server-engine
    spec:
      containers:
        - name: server-engine
          image: server-engine
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 200Mi
              cpu: 200m
            limits:
              memory: 500Mi
              cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: server-engine-service
  namespace: ksox-finance
spec:
  selector:
    app: server-engine
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
