server/k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-postgres-deployment
  labels:
    app: server-postgres
spec:
  selector:
    matchLabels:
      app: server-postgres
  template:
    metadata:
      labels:
        app: server-postgres
    spec:
      containers:
      - name: server-postgres
        image: postgres:15.2
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: server-postgres-service
spec:
  selector:
    app: server-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
