server/k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-redis-deployment
  labels:
    app: server-redis
spec:
  selector:
    matchLabels:
      app: server-redis
  template:
    metadata:
      labels:
        app: server-redis
    spec:
      containers:
      - name: server-redis
        image: redis:7.0
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: server-redis-service
spec:
  selector:
    app: server-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
