server/k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-worker-deployment
  labels:
    app: server-worker
spec:
  selector:
    matchLabels:
      app: server-worker
  template:
    metadata:
      labels:
        app: server-worker
    spec:
      containers:
      - name: server-worker
        image: server-worker
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: server-worker-service
spec:
  selector:
    app: server-worker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-worker-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - app.ksox.finance
        - pay.ksox.finance
        - dashboard.ksox.finance
      secretName: ksox-finance-tls
  rules:
  - host: app.ksox.finance
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: server-worker-service
            port:
              number: 80
  - host: pay.ksox.finance
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: server-worker-service
            port:
              number: 80
  - host: dashboard.ksox.finance
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: server-worker-service
            port:
              number: 80
